--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ requests = "^2.32.3"
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
