--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ google-api-python-client = "^2.146.0"
 python-dotenv = "^1.0.1"
 pandas = "^2.2.3"
 openpyxl = "^3.1.5"
+categories = "^0.3.5"
 
 
 
